# face_recognition

./: .editorconfig  .env.example  .flake8  .gitignore  .pylintrc  BÁO CÁO ĐỒ ÁN V2 (1).docx  DESKTOP_APP_FIXED.md  DESKTOP_APP_GUIDE.md  EXPLANATION_AWS.md  FINAL_FIX.md  FIXED_404_ERROR.md  FIX_STATUS.md  FOLDER_DATABASE_GUIDE.md  PEOPLE_TABLE_FIXED.md  QUICK_START_UI.md  README.md  RUN_FULL_SYSTEM.md  START_SYSTEM.md  SYSTEM_RUNNING.md  TESTING.md  UI_APP_GUIDE.md  clean.bat  database_manager.py  deploy-lambda.ps1  enrollment_service_v2.py  format.bat  gui_app.py  identification_service_v2.py  launcher.py  main.py  manage_database.py  pyrightconfig.json  pytest.ini  requirements-enhanced.txt  requirements.txt  restart-backend.bat  setup-aws.ps1  start-desktop-app.bat  start-frontend.bat  start-frontend.ps1  (+8 more)
.config/: .env.example  .gitignore  pyrightconfig.json
.cursor/: worktrees.json
app/: gui_app.py
aws/: .env.example  IDENTIFY_GUIDE.txt  QUICK_START.txt  SETUP_GUIDE.md  check_faces.py  create_database.py  reset_database.py  start_enhanced.py  system_dashboard.py  test_identify.py  test_identify_direct.py  view_database.py
aws/backend/lambda/functions/image-processor-rs/: Cargo.toml
aws/backend/lambda/functions/image-processor-rs/src/: main.rs
cdk.out/: FaceRecognitionBusiness.assets.json  FaceRecognitionBusiness.template.json  manifest.json  tree.json
docs/: ACTUAL_ARCHITECTURE.md  API.md  ARCHITECTURE.md  CODE_SYNCHRONIZATION_SUMMARY.md  COMPARISON_REPORT.md  COMPLETED_CHECKLIST.md  COMPLETE_100_PERCENT.md  COMPREHENSIVE_SYSTEM_CHECK.md  DEPLOYMENT.md  (+22 more)
(+118 files in other folders)
